Fixed some text wrapping

--- a/emailclient-tutorial/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/emailclient-tutorial/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -58,5 +58,8 @@ $v-border-radius: 10px;
 
     .message {
         overflow: hidden;
+        .message-sender {
+            white-space: nowrap; 
+        }
     }
 }
